# nrf-pac

./: .gitignore  Cargo.toml  README.md  patch.sh  rust-toolchain.toml  transform-extra.yaml  transform.yaml  update.sh
.github/ci/: doc.sh
scripts/: add_element.py
src/: lib.rs
src/chips/nrf51/: pac.rs
src/chips/nrf52805/: pac.rs
src/chips/nrf52810/: pac.rs
src/chips/nrf52811/: pac.rs
src/chips/nrf52820/: pac.rs
src/chips/nrf52832/: pac.rs
src/chips/nrf52833/: pac.rs
src/chips/nrf52840/: pac.rs
src/chips/nrf5340-app/: pac.rs
src/chips/nrf5340-net/: pac.rs
src/chips/nrf54l05-app/: device.x  pac.rs
src/chips/nrf54l05-flpr/: device.x
src/chips/nrf54l10-app/: device.x  pac.rs
src/chips/nrf54l10-flpr/: pac.rs
src/chips/nrf54l15-app/: pac.rs
src/chips/nrf54l15-flpr/: pac.rs
src/chips/nrf54lm20a-app/: device.x  pac.rs
src/chips/nrf54lm20a-flpr/: device.x  pac.rs
src/chips/nrf9120/: pac.rs
src/chips/nrf9160/: pac.rs
svd/: nrf52805.svd  nrf52810.svd  nrf52811.svd  nrf52820.svd  nrf52833.svd  nrf5340-app.svd  nrf5340-net.svd  nrf54l05-app.svd  nrf54l10-app.svd  nrf54l15-app.svd  nrf9120.svd  nrf9160.svd
svd-patches/: clock_power_irq_54l.xml  clock_power_irq_54lm.xml  clock_power_nrf54l15.patch
