[package]
name = "nrf-pac"
version = "0.1.0"
edition = "2021"
license = "BSD-3-Clause"
description = "Peripheral Access Crate (PAC) for Nordic Semiconductor nRF chips."
keywords = ["no-std", "arm", "cortex-m", "nrf", "peripherals"]
repository = "https://github.com/embassy-rs/nrf-pac"
documentation = "https://docs.embassy.dev/nrf-pac"

[dependencies]
cortex-m = "0.7.1"
cortex-m-rt = { version = ">=0.6.15,<0.8", optional = true }
defmt = { version = "0.3.10", optional = true }

[features]
rt = ["cortex-m-rt/device"]
defmt = ["dep:defmt"]

nrf51 = []
nrf52805 = []
nrf52810 = []
nrf52811 = []
nrf52820 = []
nrf52832 = []
nrf52833 = []
nrf52840 = []
nrf5340-app = []
nrf5340-net = []
nrf54l05-app = []
nrf54l05-flpr = []
nrf54l10-app = []
nrf54l10-flpr = []
nrf54l15-app = []
nrf54l15-flpr = []
nrf54lm20a-app = []
nrf54lm20a-flpr = []
nrf9120 = []
nrf9160 = []

[package.metadata.embassy_docs]
src_base = "https://github.com/embassy-rs/nrf-pac/blob/v$VERSION/src/"
src_base_git = "https://github.com/embassy-rs/nrf-pac/blob/$COMMIT/src/"
features = ["rt"]
flavors = [
    { regex_feature = "nrf51", target = "thumbv6m-none-eabi" },
    { regex_feature = "nrf52.*", target = "thumbv7em-none-eabihf" },
    { regex_feature = "nrf53.*", target = "thumbv8m.main-none-eabihf" },
    { regex_feature = "nrf54.*", target = "thumbv8m.main-none-eabihf" },
    { regex_feature = "nrf91.*", target = "thumbv8m.main-none-eabihf" },
]
